# pgmini

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
github/workflows/: build.yml
pgmini/: __init__.py  alias.py  array.py  case.py  cast.py  column.py  delete.py  distinct.py  func.py  insert.py  literal.py  marks.py  operation.py  operations.py  operators.py  order_by.py  param.py  raw.py  select.py  subquery.py  table.py  update.py  utils.py
tests/: test_array.py  test_boolean_operators.py  test_build.py  test_case.py  test_delete.py  test_func.py  test_insert.py  test_join.py  test_literal.py  test_operation.py  test_param.py  test_select.py  test_subquery.py  test_table.py  test_tuple.py  test_update.py  test_version.py  utils.py
