[tool.poetry]
name = "pgmini"
version = "0.1.4"
description = "Build sql for PostgreSQL"
authors = ["Vitalii Ponomar"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ponomar/pgmini"

[tool.poetry.dependencies]
python = ">=3.10"
attrs = ">=22.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
isort = "^5.12.0"
ruff = "^0.0.252"
tomli = "^2.0.1"

[tool.isort]
line_length = 100
known_first_party = ["pgmini", "tests"]
known_third_party = ["pytest", "attrs", "tomli"]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
combine_as_imports = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
line-length = 100
target-version = "py310"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
